--- a/templates/home.html
+++ b/templates/home.html
@@ -2,21 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+        {% include 'bootstrap.html' %}
         <title>Career Website</title>
-        <style>
-            #banner{
-                height: 360px;
-                width: 100%;
-                object-fit: cover;
-                margin-bottom: 16px;
-            }
-        </style>
     </head>
     <body>
         {% include 'nav.html'%}
-        <img class="img-fluid" id="banner" src="/static/banner.jpg" alt="">
+        
+        {% include 'banner.html'%}
         <div class="container">
             <h1 class="text-center mt-2 mb-4">Career Website</h1>
             <h2 class="text-center mt-2 mb-4">About Us</h2>
