--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -11,7 +11,7 @@
         {% endif %}
     </div>
     <div class="col-2">
-        <a href="mailto:hr@careers.com?subject=Application%20for%20{{job['title']}}&body=My%20Name%3A%20%3Cyour-name%3E%0D%0A%0D%0AMy%20LinkedIn%20Link%3A%20%3Cyour-linkedin-url%3E%0D%0A%0D%0AMy%20Resume%20Link%3A%20%3Cyour-resume-link%3E "  
+        <a href="/job/{{job['id']}}"  
         type="button" class="btn btn-outline-primary">Apply</a>
     </div>
 </div>
