--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -26,6 +26,7 @@
             </ul>
              <h4>Salary</h4>
             <p>{{job.currency}} - {{job.salary}}</p>
+            {% include 'application_form.html' %}
         </div>
         {% include 'footer.html' %}
     </body>
